2nd training/Community/Community/Community1/force-app/main/default/objects/CrateInstructionLineItem__c/CrateInstructionLineItem__c.object-meta.xml
<CustomObject>
    <label>CartonFabricationLineItem</label>
    <nameField>
        <displayFormat>CLI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CrateInstructionLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>