2nd training/Community/Community/Community1/force-app/main/default/objects/CrateInstructionLineItem__c/fields/Breadth_inch__c.field-meta.xml
<CustomField>
    <fullName>Breadth_inch__c</fullName>
    <label>Breadth (inch)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>