2nd training/Community/Community/Community1/force-app/main/default/objects/CrateInstructionLineItem__c/fields/Carton_Fabrication__c.field-meta.xml
<CustomField>
    <fullName>Carton_Fabrication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carton Fabrication</label>
    <referenceTo>Carton_Fabrication__c</referenceTo>
    <relationshipName>CrateInstructionLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>