2nd training/Community/Community/Community1/force-app/main/default/objects/CrateInstructionLineItem__c/fields/Carton_Lining__c.field-meta.xml
<CustomField>
    <fullName>Carton_Lining__c</fullName>
    <label>Carton Lining</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silicon Paper (油紙)</fullName>
            </value>
            <value>
                <fullName>PE 1”</fullName>
            </value>
            <value>
                <fullName>PE 1.5”</fullName>
            </value>
            <value>
                <fullName>PE 2”</fullName>
            </value>
            <value>
                <fullName>Grey Sponge 1”</fullName>
            </value>
            <value>
                <fullName>Grey Sponge 1.5”</fullName>
            </value>
            <value>
                <fullName>Grey Sponge 2”</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>