2nd training/Community/Community/Community1/force-app/main/default/objects/CrateInstructionLineItem__c/fields/Carton_Type__c.field-meta.xml
<CustomField>
    <fullName>Carton_Type__c</fullName>
    <label>Carton Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shoe Box (天地)</fullName>
            </value>
            <value>
                <fullName>Cake Box (西餅)</fullName>
            </value>
            <value>
                <fullName>Envelope (拉盒)</fullName>
            </value>
            <value>
                <fullName>Others (其他)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>