2nd training/Community/Community/Community1/force-app/main/default/objects/CrateInstructionLineItem__c/fields/Length_inch__c.field-meta.xml
<CustomField>
    <fullName>Length_inch__c</fullName>
    <label>Length (inch)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>